[tool.poetry]
name = "snowday"
version = "0.1.0"
description = ""
authors = ["Sidharth Rao <sidharthmrao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pymongo = "^4.3.3"
requests = "^2.28.2"
googlemaps = "^4.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
